# raspberry_pi

./: .gitignore  CONTRIBUTING.md  ENTERPRISE_UPGRADE_SUMMARY.md  LICENSE  PROJECT_COMPLETION_STATUS.md  README  README.md  README2  README_ENTERPRISE.md  SECURITY.md  TODO.md  decrypt_data.py  pyproject.toml  requirements-dev.txt  requirements.txt  setup_demo.py  test_enterprise.py
docs/: hardware-setup.md  legal-ethical-guidelines.md  usb-attacks-guide.md
etc/systemd/system/: cyber_payload.service
presentations/: conference-presentation-guide.md  live-demo-script.py
scripts/: setup.sh
src/: __init__.py  main.py
src/payloads/: macos_payload.sh  windows_payload.ps1
src/tools/: __init__.py  advanced_security.py  decrypt_data.py  demo_generator.py  detect_os.py  encrypt_data.py  security_education.py
tests/: __init__.py  test_cybersec_tool.py
